# flowbiz-template-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  guardrails.yml  pr-labels.yml
apps/api/: main.py
apps/api/routes/: health.py
apps/api/routes/v1/: meta.py
docs/: ADR_SYSTEM_NGINX.md  AGENT_BEHAVIOR_LOCK.md  AGENT_NEW_PROJECT_CHECKLIST.md  CODEX_PREFLIGHT.md  DEPLOYMENT.md  GUARDRAILS.md  PROJECT_CONTRACT.md
nginx/: README.md
nginx/snippets/: security_headers.conf
nginx/templates/: default.conf.template
tests/: test_health.py  test_meta.py
